<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_gradient"
    tools:context=".LoginActivity">
    <android.support.constraint.ConstraintLayout
        android:paddingTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LoginTagLine1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_tag_1"
            android:textColor="@color/colorfontTagLine"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/LoginTagLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_tag_2"
            android:textColor="@color/colorfontTagLine"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/LoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textScaleX="1.5"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <android.support.v7.widget.CardView
        android:layout_height="250dp"
        android:layout_width="300dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TextLoginBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_LOGIN"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                />


    <TextView
        android:id="@+id/TextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />
<EditText
    android:id="@+id/EditUsername"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:elevation="2dp"
    android:inputType="text"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/TextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif" />
        <EditText
            android:id="@+id/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:elevation="2dp"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_login"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_LOGIN"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="90dp"
            android:background="@color/color_login_btn"
            android:layout_gravity="bottom"
            android:onClick="onLoginClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_ACK"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:paddingTop="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/TextSignUp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/login_settings"
            android:elevation="2dp"
            android:gravity="end"
            android:paddingStart="100dp"
            android:paddingBottom="36dp"
            android:onClick="onSignUp" />
    </RelativeLayout>

</LinearLayout>