<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_gradient"
    tools:context=".SignupActivity">



    <android.support.v7.widget.CardView
        android:layout_height="440dp"
        android:layout_width="300dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="110dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal">
                    <LinearLayout
                        android:layout_height="150dp"
                        android:layout_width="175dp"
                        android:orientation="vertical"
                        android:layout_column="1">
                        <TextView
                            android:id="@+id/signup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signup_SIGNUP"
                            android:textSize="20sp"
                            android:fontFamily="sans-serif"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:paddingTop="20dp"
                            />
                        <ViewStub
                            android:id="@+id/signupAdmin"
                            android:layout_height="match_parent"
                            android:layout="@layout/activity_signup_stub"
                            android:layout_width="175dp">
                        </ViewStub>
                    </LinearLayout>

                <ImageButton
                    android:id="@+id/Userimage"
                    android:layout_column="1"
                    android:background="@drawable/add_photo"
                    android:layout_height="90dp"
                    android:layout_width="90dp"
                    android:layout_marginTop= "10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:onClick="onPhotoClick"
                    />
                </TableRow>
            </TableLayout>


            <TextView
                android:id="@+id/TextFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_fullname"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />
            <EditText
                android:id="@+id/EditFullname"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:elevation="2dp"
                android:inputType="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"/>


            <TextView
                android:id="@+id/TextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />
            <EditText
                android:id="@+id/EditUsername"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:elevation="2dp"
                android:inputType="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/TextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif" />
            <EditText
                android:id="@+id/EditPassword"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:elevation="2dp"
                android:inputType="textPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary" />
            <TextView
                android:id="@+id/TextConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_confirmpassword"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif" />
            <EditText
                android:id="@+id/EditConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:elevation="2dp"
                android:inputType="textPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary" />
            <Button
                android:id="@+id/btn_login"
                android:layout_height="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/signup_REGISTER"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="90dp"
                android:background="@color/color_login_btn"
                android:layout_gravity="end"
                android:onClick="onRegisterClick"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/LoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textScaleX="1.5"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
</LinearLayout>